@@ -850,6 +850,7 @@
 
 [v1.1.2p1f]
  - Bugfix: DockController uses the ClassLoader of "DockController" and not of "this" to load resource files. This resolves an issue when using the framework with OSGi.
+ - Bugfix: Toolbar extension: an expanded ToolbarDockStation could no longer be shrunk.
      
 [Todo]
 - Drop StackDockStation over Dockable and merge them
